Improve SMS code request rejection message

--- a/app/src/main/res/values/strings2.xml
+++ b/app/src/main/res/values/strings2.xml
@@ -107,4 +107,5 @@
     <string name="RegistrationActivity_link_error">An error has occurred while trying to link the device. Check your network connectivity, and retry</string>
     <string name="RegistrationActivity_link_timeout">Timed out waiting for the primary device. Ready your device to scan the QR code, then try again</string>
     <string name="RegistrationActivity_link_retry">Retry linking</string>
+    <string name="RegistrationActivity_provider_declined">The provider has declined to send you a verification code, likely due to fraud prevention rules.</string>
 </resources>
