Fix more color mismatches

--- a/app/src/main/res/drawable/ic_app_icon_default_top_preview.xml
+++ b/app/src/main/res/drawable/ic_app_icon_default_top_preview.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="64"
     android:viewportHeight="64">
     <path
-        android:fillColor="#3A76F0"
+        android:fillColor="@color/core_ultramarine_icon"
         android:pathData="M32,0L32,0A32,32 0,0 1,64 32L64,32A32,32 0,0 1,32 64L32,64A32,32 0,0 1,0 32L0,32A32,32 0,0 1,32 0z" />
     <path
         android:fillColor="#ffffff"
