--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -14,7 +14,7 @@
     <path
         android:pathData="M340.932,443.404m-27.29,0a27.292,27.29 90.031,1 1,54.58 0a27.292,27.29 90.031,1 1,-54.58 0"
         android:strokeWidth=".64448"
-        android:fillColor="#7663f0"/>
+        android:fillColor="@color/core_ultramarine_icon"/>
     <path
         android:pathData="M454.784,376.344m-27.29,0a27.292,27.29 90.031,1 1,54.58 0a27.292,27.29 90.031,1 1,-54.58 0"
         android:strokeWidth=".64448"
@@ -26,7 +26,7 @@
     <path
         android:pathData="M454.784,443.404m-27.29,0a27.292,27.29 90.031,1 1,54.58 0a27.292,27.29 90.031,1 1,-54.58 0"
         android:strokeWidth=".64448"
-        android:fillColor="#7663f0"/>
+        android:fillColor="@color/core_ultramarine_icon"/>
     <path
         android:pathData="M454.784,309.296m-27.29,0a27.292,27.29 90.031,1 1,54.58 0a27.292,27.29 90.031,1 1,-54.58 0"
         android:strokeWidth=".64448"
@@ -42,7 +42,7 @@
     <path
         android:pathData="M227.081,443.404m-27.29,0a27.292,27.29 90.031,1 1,54.58 0a27.292,27.29 90.031,1 1,-54.58 0"
         android:strokeWidth=".64448"
-        android:fillColor="#7663f0"/>
+        android:fillColor="@color/core_ultramarine_icon"/>
     <path
         android:pathData="M340.932,309.296m-27.29,0a27.292,27.29 90.031,1 1,54.58 0a27.292,27.29 90.031,1 1,-54.58 0"
         android:strokeWidth=".64448"
