--- a/app/src/main/res/drawable/sms_message.xml
+++ b/app/src/main/res/drawable/sms_message.xml
@@ -20,6 +20,6 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="M74.63,43c-3.52,0 -6.37,2.91 -6.37,6.49v4.15c-0.32,-0 -0.67,-0 -1.06,-0h-4.12c-2.13,0 -3.19,0 -4,0.42a3.83,3.83 0,0 0,-1.66 1.69C57,56.57 57,57.66 57,59.82v1.99c0,2.16 0,3.25 0.41,4.07 0.36,0.73 0.94,1.32 1.66,1.69 0.81,0.42 1.88,0.42 4,0.42h4.12c2.13,0 3.19,0 4,-0.42a3.83,3.83 0,0 0,1.66 -1.69c0.41,-0.83 0.41,-1.91 0.41,-4.08v-1.99c0,-2.17 0,-3.25 -0.41,-4.08a3.83,3.83 0,0 0,-1.66 -1.69,2.78 2.78,0 0,0 -0.5,-0.2v-4.36c0,-2.21 1.76,-4.01 3.93,-4.01 2.17,0 3.93,1.79 3.93,4.01v1.93c0,0.69 0.55,1.24 1.22,1.24 0.68,0 1.22,-0.56 1.22,-1.24v-1.93C81,45.91 78.15,43 74.63,43ZM66.08,61.09c0.49,-0.32 0.81,-0.88 0.81,-1.51 0,-0.99 -0.79,-1.8 -1.76,-1.8 -0.97,0 -1.76,0.8 -1.76,1.8 0,0.63 0.32,1.19 0.81,1.51v1.94c0,0.53 0.43,0.97 0.95,0.97a0.96,0.96 0,0 0,0.95 -0.97v-1.94Z"
-      android:fillColor="#3A76F0"
+      android:fillColor="@color/core_ultramarine_icon"
       android:fillType="evenOdd"/>
 </vector>
