--- a/app/src/main/res/drawable/sms_small_encrypted.xml
+++ b/app/src/main/res/drawable/sms_small_encrypted.xml
@@ -19,6 +19,6 @@
       android:fillColor="#4CAF50"/>
   <path
       android:pathData="M27,11.75A5.25,5.25 0,0 0,21.75 17v3.469a3.5,3.5 0,0 0,-1.369 1.442C20,22.66 20,23.64 20,25.6v1.8c0,1.96 0,2.94 0.381,3.689a3.5,3.5 0,0 0,1.53 1.53C22.66,33 23.64,33 25.6,33h2.8c1.96,0 2.94,0 3.689,-0.382a3.5,3.5 0,0 0,1.53 -1.529C34,30.34 34,29.36 34,27.4v-1.8c0,-1.96 0,-2.94 -0.382,-3.689a3.5,3.5 0,0 0,-1.368 -1.442L32.25,17c0,-2.9 -2.35,-5.25 -5.25,-5.25ZM29.75,20.007L29.75,17a2.75,2.75 0,1 0,-5.5 0v3.007C24.642,20 25.087,20 25.6,20h2.8c0.513,0 0.958,0 1.35,0.007ZM28,26.687a1.75,1.75 0,1 0,-2 0L26,28.5a1,1 0,1 0,2 0v-1.814Z"
-      android:fillColor="#3A76F0"
+      android:fillColor="@color/core_ultramarine_icon"
       android:fillType="evenOdd"/>
 </vector>
