--- a/app/src/main/res/drawable-night/ic_complete_reg.xml
+++ b/app/src/main/res/drawable-night/ic_complete_reg.xml
@@ -61,36 +61,36 @@
         android:fillColor="#919191"/>
     <path
         android:pathData="M100,70m-56,0a56,56 0,1 1,112 0a56,56 0,1 1,-112 0"
-        android:fillColor="#1b1c1f"/>
+        android:fillColor="@color/signal_dark_colorSurface"/>
     <path
         android:pathData="M100,70m-56,0a56,56 0,1 1,112 0a56,56 0,1 1,-112 0"
         android:strokeAlpha="0.08"
-        android:fillColor="#b6c5fa"
+        android:fillColor="@color/core_ultramarine_light_50"
         android:fillAlpha="0.08"/>
     <path
         android:pathData="M24,40L60,40A6,6 0,0 1,66 46L66,132A6,6 0,0 1,60 138L24,138A6,6 0,0 1,18 132L18,46A6,6 0,0 1,24 40z"
-        android:fillColor="#1b1c1f"/>
+        android:fillColor="@color/signal_dark_colorSurface"/>
     <path
         android:pathData="M60,42c2.21,0 4,1.79 4,4v86c0,2.21 -1.79,4 -4,4H24c-2.21,0 -4,-1.79 -4,-4V46c0,-2.21 1.79,-4 4,-4H60m0,-4H24c-4.42,0 -8,3.58 -8,8v86c0,4.42 3.58,8 8,8H60c4.42,0 8,-3.58 8,-8V46c0,-4.42 -3.58,-8 -8,-8h0Z"
-        android:fillColor="#5c5e65"/>
+        android:fillColor="@color/signal_dark_colorOutline"/>
     <path
         android:pathData="M140,2L176,2A6,6 0,0 1,182 8L182,94A6,6 0,0 1,176 100L140,100A6,6 0,0 1,134 94L134,8A6,6 0,0 1,140 2z"
-        android:fillColor="#1b1c1f"/>
+        android:fillColor="@color/signal_dark_colorSurface"/>
     <path
         android:pathData="M176,4c2.21,0 4,1.79 4,4V94c0,2.21 -1.79,4 -4,4h-36c-2.21,0 -4,-1.79 -4,-4V8c0,-2.21 1.79,-4 4,-4h36m0,-4h-36c-4.42,0 -8,3.58 -8,8V94c0,4.42 3.58,8 8,8h36c4.42,0 8,-3.58 8,-8V8c0,-4.42 -3.58,-8 -8,-8h0Z"
-        android:fillColor="#5c5e65"/>
+        android:fillColor="@color/signal_dark_colorOutline"/>
     <path
         android:pathData="M141.5,24L166.5,24A1.5,1.5 0,0 1,168 25.5L168,25.5A1.5,1.5 0,0 1,166.5 27L141.5,27A1.5,1.5 0,0 1,140 25.5L140,25.5A1.5,1.5 0,0 1,141.5 24z"
-        android:fillColor="#5c5e65"/>
+        android:fillColor="@color/signal_dark_colorOutline"/>
     <path
         android:pathData="M166,84L172,84A4,4 0,0 1,176 88L176,88A4,4 0,0 1,172 92L166,92A4,4 0,0 1,162 88L162,88A4,4 0,0 1,166 84z"
         android:fillColor="@color/core_ultramarine_light_50"/>
     <path
         android:pathData="M142,34L149,34A2,2 0,0 1,151 36L151,40A2,2 0,0 1,149 42L142,42A2,2 0,0 1,140 40L140,36A2,2 0,0 1,142 34z"
-        android:fillColor="#5c5e65"/>
+        android:fillColor="@color/signal_dark_colorOutline"/>
     <path
         android:pathData="M155,34L174,34A2,2 0,0 1,176 36L176,40A2,2 0,0 1,174 42L155,42A2,2 0,0 1,153 40L153,36A2,2 0,0 1,155 34z"
-        android:fillColor="#5c5e65"/>
+        android:fillColor="@color/signal_dark_colorOutline"/>
     <path
         android:pathData="M186.36,59.48l1.35,3.66c0.05,0.14 0.18,0.23 0.33,0.23s0.28,-0.09 0.33,-0.23l1.35,-3.66c1.09,-2.96 3.43,-5.3 6.39,-6.39l3.66,-1.35c0.14,-0.05 0.23,-0.18 0.23,-0.33s-0.09,-0.28 -0.23,-0.33l-3.66,-1.35c-2.96,-1.09 -5.3,-3.43 -6.39,-6.39l-1.35,-3.66c-0.05,-0.14 -0.18,-0.23 -0.33,-0.23s-0.28,0.09 -0.33,0.23l-1.35,3.66c-1.09,2.96 -3.43,5.3 -6.39,6.39l-3.66,1.35c-0.14,0.05 -0.23,0.18 -0.23,0.33s0.09,0.28 0.23,0.33l3.66,1.35c2.96,1.09 5.3,3.43 6.39,6.39Z"
         android:fillColor="#ffd624"/>
@@ -105,5 +105,5 @@
         android:fillColor="@color/core_ultramarine_light_50"/>
     <path
         android:pathData="M141.5,18L158.5,18A1.5,1.5 0,0 1,160 19.5L160,19.5A1.5,1.5 0,0 1,158.5 21L141.5,21A1.5,1.5 0,0 1,140 19.5L140,19.5A1.5,1.5 0,0 1,141.5 18z"
-        android:fillColor="#5c5e65"/>
+        android:fillColor="@color/signal_dark_colorOutline"/>
 </vector>
