--- a/app/src/main/res/drawable/sms_small_export.xml
+++ b/app/src/main/res/drawable/sms_small_export.xml
@@ -19,5 +19,5 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="m31.086,31 l-3.293,-3.293a1,1 0,0 1,1.414 -1.414l5,5a1,1 0,0 1,0 1.414l-5,5a1,1 0,0 1,-1.414 -1.414L31.086,33H21.5a8,8 0,0 1,-8 -8v-3a1,1 0,1 1,2 0v3a6,6 0,0 0,6 6h9.586Z"
-      android:fillColor="#2C6BED"/>
+      android:fillColor="@color/core_ultramarine"/>
 </vector>
